src/Expr/ExprParser.java
package Expr; // $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/Samy/Git_Telecom/Compilation2k18/Expr.g 2018-04-09 23:39:25

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class ExprParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "STRUCT", "FUNC", "BLOC", "ARGUMENT", "AFFECT", "WHILE", "IF", "ELSE", "RETURN", "SPE_UNAIRE", "FUNC_ARGS", "VAR", "VEC", "PRINT", "DECL", "IND", "ASSOC", "CALL_ARGS", "IDF", "CST_ENT", "NEWLINE", "WS", "COMMENT", "COMMENTLINE", "'struct'", "'{'", "':'", "','", "'}'", "'fn'", "'('", "')'", "'->'", "'Vec'", "'<'", "'>'", "'&'", "'i32'", "'bool'", "';'", "'let'", "'mut'", "'='", "'return'", "'while'", "'if'", "'else'", "'||'", "'&&'", "'vec'", "'!['", "']'", "'print'", "'!('", "'['", "'.'", "'len'", "'true'", "'false'", "'+'", "'-'", "'*'", "'/'", "'<='", "'>='", "'=='", "'!='", "'!'"
    };
    public static final int PRINT=17;
    public static final int BLOC=6;
    public static final int T__50=50;
    public static final int VAR=15;
    public static final int IDF=22;
    public static final int COMMENTLINE=27;
    public static final int T__59=59;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int ELSE=11;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int IF=10;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int NEWLINE=24;
    public static final int DECL=18;
    public static final int T__28=28;
    public static final int FUNC_ARGS=14;
    public static final int T__29=29;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int STRUCT=4;
    public static final int T__64=64;
    public static final int IND=19;
    public static final int T__65=65;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int SPE_UNAIRE=13;
    public static final int COMMENT=26;
    public static final int ASSOC=20;
    public static final int RETURN=12;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__33=33;
    public static final int ARGUMENT=7;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int WS=25;
    public static final int EOF=-1;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int CST_ENT=23;
    public static final int FUNC=5;
    public static final int CALL_ARGS=21;
    public static final int AFFECT=8;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int VEC=16;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int WHILE=9;
    public static final int T__47=47;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;

    // delegates
    // delegators


        public ExprParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public ExprParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return ExprParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/Samy/Git_Telecom/Compilation2k18/Expr.g"; }


    public static class fichier_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "fichier"
    // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:30:1: fichier : ( decl )* ;
    public final ExprParser.fichier_return fichier() throws RecognitionException {
        ExprParser.fichier_return retval = new ExprParser.fichier_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        ExprParser.decl_return decl1 = null;



        try {
            // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:31:2: ( ( decl )* )
            // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:31:3: ( decl )*
            {
            root_0 = (Object)adaptor.nil();

            // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:31:3: ( decl )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==28||LA1_0==33) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:31:3: decl
            	    {
            	    pushFollow(FOLLOW_decl_in_fichier116);
            	    decl1=decl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, decl1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "fichier"

    public static class decl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "decl"
    // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:33:1: decl : ( decl_func | decl_struct );
    public final ExprParser.decl_return decl() throws RecognitionException {
        ExprParser.decl_return retval = new ExprParser.decl_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        ExprParser.decl_func_return decl_func2 = null;

        ExprParser.decl_struct_return decl_struct3 = null;



        try {
            // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:34:2: ( decl_func | decl_struct )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==33) ) {
                alt2=1;
            }
            else if ( (LA2_0==28) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:34:3: decl_func
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_decl_func_in_decl129);
                    decl_func2=decl_func();

                    state._fsp--;

                    adaptor.addChild(root_0, decl_func2.getTree());

                    }
                    break;
                case 2 :
                    // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:35:3: decl_struct
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_decl_struct_in_decl133);
                    decl_struct3=decl_struct();

                    state._fsp--;

                    adaptor.addChild(root_0, decl_struct3.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "decl"

    public static class decl_struct_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "decl_struct"
    // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:38:1: decl_struct : 'struct' IDF '{' ( IDF ':' type ( ',' IDF ':' type )* )? '}' -> ^( STRUCT IDF ( ^( VAR IDF type ) )* ) ;
    public final ExprParser.decl_struct_return decl_struct() throws RecognitionException {
        ExprParser.decl_struct_return retval = new ExprParser.decl_struct_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal4=null;
        Token IDF5=null;
        Token char_literal6=null;
        Token IDF7=null;
        Token char_literal8=null;
        Token char_literal10=null;
        Token IDF11=null;
        Token char_literal12=null;
        Token char_literal14=null;
        ExprParser.type_return type9 = null;

        ExprParser.type_return type13 = null;


        Object string_literal4_tree=null;
        Object IDF5_tree=null;
        Object char_literal6_tree=null;
        Object IDF7_tree=null;
        Object char_literal8_tree=null;
        Object char_literal10_tree=null;
        Object IDF11_tree=null;
        Object char_literal12_tree=null;
        Object char_literal14_tree=null;
        RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
        RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
        RewriteRuleTokenStream stream_IDF=new RewriteRuleTokenStream(adaptor,"token IDF");
        RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:39:2: ( 'struct' IDF '{' ( IDF ':' type ( ',' IDF ':' type )* )? '}' -> ^( STRUCT IDF ( ^( VAR IDF type ) )* ) )
            // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:39:3: 'struct' IDF '{' ( IDF ':' type ( ',' IDF ':' type )* )? '}'
            {
            string_literal4=(Token)match(input,28,FOLLOW_28_in_decl_struct143);  
            stream_28.add(string_literal4);

            IDF5=(Token)match(input,IDF,FOLLOW_IDF_in_decl_struct145);  
            stream_IDF.add(IDF5);

            char_literal6=(Token)match(input,29,FOLLOW_29_in_decl_struct147);  
            stream_29.add(char_literal6);

            // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:39:20: ( IDF ':' type ( ',' IDF ':' type )* )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==IDF) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:39:21: IDF ':' type ( ',' IDF ':' type )*
                    {
                    IDF7=(Token)match(input,IDF,FOLLOW_IDF_in_decl_struct150);  
                    stream_IDF.add(IDF7);

                    char_literal8=(Token)match(input,30,FOLLOW_30_in_decl_struct152);  
                    stream_30.add(char_literal8);

                    pushFollow(FOLLOW_type_in_decl_struct154);
                    type9=type();

                    state._fsp--;

                    stream_type.add(type9.getTree());
                    // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:39:34: ( ',' IDF ':' type )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==31) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:39:35: ',' IDF ':' type
                    	    {
                    	    char_literal10=(Token)match(input,31,FOLLOW_31_in_decl_struct157);  
                    	    stream_31.add(char_literal10);

                    	    IDF11=(Token)match(input,IDF,FOLLOW_IDF_in_decl_struct159);  
                    	    stream_IDF.add(IDF11);

                    	    char_literal12=(Token)match(input,30,FOLLOW_30_in_decl_struct161);  
                    	    stream_30.add(char_literal12);

                    	    pushFollow(FOLLOW_type_in_decl_struct163);
                    	    type13=type();

                    	    state._fsp--;

                    	    stream_type.add(type13.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    }
                    break;

            }

            char_literal14=(Token)match(input,32,FOLLOW_32_in_decl_struct169);  
            stream_32.add(char_literal14);



            // AST REWRITE
            // elements: IDF, IDF, type
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 39:60: -> ^( STRUCT IDF ( ^( VAR IDF type ) )* )
            {
                // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:39:63: ^( STRUCT IDF ( ^( VAR IDF type ) )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(STRUCT, "STRUCT"), root_1);

                adaptor.addChild(root_1, stream_IDF.nextNode());
                // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:39:76: ( ^( VAR IDF type ) )*
                while ( stream_IDF.hasNext()||stream_type.hasNext() ) {
                    // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:39:76: ^( VAR IDF type )
                    {
                    Object root_2 = (Object)adaptor.nil();
                    root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(VAR, "VAR"), root_2);

                    adaptor.addChild(root_2, stream_IDF.nextNode());
                    adaptor.addChild(root_2, stream_type.nextTree());

                    adaptor.addChild(root_1, root_2);
                    }

                }
                stream_IDF.reset();
                stream_type.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "decl_struct"

    public static class decl_func_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "decl_func"
    // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:42:1: decl_func : 'fn' IDF '(' ( args )? ')' ( '->' type )? bloc -> ^( FUNC IDF ( args )? ( type )? bloc ) ;
    public final ExprParser.decl_func_return decl_func() throws RecognitionException {
        ExprParser.decl_func_return retval = new ExprParser.decl_func_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal15=null;
        Token IDF16=null;
        Token char_literal17=null;
        Token char_literal19=null;
        Token string_literal20=null;
        ExprParser.args_return args18 = null;

        ExprParser.type_return type21 = null;

        ExprParser.bloc_return bloc22 = null;


        Object string_literal15_tree=null;
        Object IDF16_tree=null;
        Object char_literal17_tree=null;
        Object char_literal19_tree=null;
        Object string_literal20_tree=null;
        RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
        RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleTokenStream stream_35=new RewriteRuleTokenStream(adaptor,"token 35");
        RewriteRuleTokenStream stream_36=new RewriteRuleTokenStream(adaptor,"token 36");
        RewriteRuleTokenStream stream_IDF=new RewriteRuleTokenStream(adaptor,"token IDF");
        RewriteRuleSubtreeStream stream_args=new RewriteRuleSubtreeStream(adaptor,"rule args");
        RewriteRuleSubtreeStream stream_bloc=new RewriteRuleSubtreeStream(adaptor,"rule bloc");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:43:2: ( 'fn' IDF '(' ( args )? ')' ( '->' type )? bloc -> ^( FUNC IDF ( args )? ( type )? bloc ) )
            // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:43:3: 'fn' IDF '(' ( args )? ')' ( '->' type )? bloc
            {
            string_literal15=(Token)match(input,33,FOLLOW_33_in_decl_func196);  
            stream_33.add(string_literal15);

            IDF16=(Token)match(input,IDF,FOLLOW_IDF_in_decl_func198);  
            stream_IDF.add(IDF16);

            char_literal17=(Token)match(input,34,FOLLOW_34_in_decl_func200);  
            stream_34.add(char_literal17);

            // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:43:16: ( args )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==IDF) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:43:16: args
                    {
                    pushFollow(FOLLOW_args_in_decl_func202);
                    args18=args();

                    state._fsp--;

                    stream_args.add(args18.getTree());

                    }
                    break;

            }

            char_literal19=(Token)match(input,35,FOLLOW_35_in_decl_func205);  
            stream_35.add(char_literal19);

            // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:43:26: ( '->' type )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==36) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:43:28: '->' type
                    {
                    string_literal20=(Token)match(input,36,FOLLOW_36_in_decl_func209);  
                    stream_36.add(string_literal20);

                    pushFollow(FOLLOW_type_in_decl_func211);
                    type21=type();

                    state._fsp--;

                    stream_type.add(type21.getTree());

                    }
                    break;

            }

            pushFollow(FOLLOW_bloc_in_decl_func216);
            bloc22=bloc();

            state._fsp--;

            stream_bloc.add(bloc22.getTree());


            // AST REWRITE
            // elements: type, IDF, args, bloc
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 43:46: -> ^( FUNC IDF ( args )? ( type )? bloc )
            {
                // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:43:49: ^( FUNC IDF ( args )? ( type )? bloc )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUNC, "FUNC"), root_1);

                adaptor.addChild(root_1, stream_IDF.nextNode());
                // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:43:60: ( args )?
                if ( stream_args.hasNext() ) {
                    adaptor.addChild(root_1, stream_args.nextTree());

                }
                stream_args.reset();
                // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:43:66: ( type )?
                if ( stream_type.hasNext() ) {
                    adaptor.addChild(root_1, stream_type.nextTree());

                }
                stream_type.reset();
                adaptor.addChild(root_1, stream_bloc.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "decl_func"

    public static class args_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "args"
    // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:46:1: args : argument ( ',' argument )* -> ^( FUNC_ARGS ( argument )* ) ;
    public final ExprParser.args_return args() throws RecognitionException {
        ExprParser.args_return retval = new ExprParser.args_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal24=null;
        ExprParser.argument_return argument23 = null;

        ExprParser.argument_return argument25 = null;


        Object char_literal24_tree=null;
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleSubtreeStream stream_argument=new RewriteRuleSubtreeStream(adaptor,"rule argument");
        try {
            // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:47:2: ( argument ( ',' argument )* -> ^( FUNC_ARGS ( argument )* ) )
            // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:47:3: argument ( ',' argument )*
            {
            pushFollow(FOLLOW_argument_in_args244);
            argument23=argument();

            state._fsp--;

            stream_argument.add(argument23.getTree());
            // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:47:11: ( ',' argument )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==31) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:47:12: ',' argument
            	    {
            	    char_literal24=(Token)match(input,31,FOLLOW_31_in_args246);  
            	    stream_31.add(char_literal24);

            	    pushFollow(FOLLOW_argument_in_args248);
            	    argument25=argument();

            	    state._fsp--;

            	    stream_argument.add(argument25.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);



            // AST REWRITE
            // elements: argument
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 47:27: -> ^( FUNC_ARGS ( argument )* )
            {
                // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:47:30: ^( FUNC_ARGS ( argument )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUNC_ARGS, "FUNC_ARGS"), root_1);

                // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:47:42: ( argument )*
                while ( stream_argument.hasNext() ) {
                    adaptor.addChild(root_1, stream_argument.nextTree());

                }
                stream_argument.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "args"

    public static class type_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "type"
    // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:50:1: type : ( IDF | 'Vec' '<' type '>' -> ^( VEC type ) | '&' type | 'i32' | 'bool' );
    public final ExprParser.type_return type() throws RecognitionException {
        ExprParser.type_return retval = new ExprParser.type_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token IDF26=null;
        Token string_literal27=null;
        Token char_literal28=null;
        Token char_literal30=null;
        Token char_literal31=null;
        Token string_literal33=null;
        Token string_literal34=null;
        ExprParser.type_return type29 = null;

        ExprParser.type_return type32 = null;


        Object IDF26_tree=null;
        Object string_literal27_tree=null;
        Object char_literal28_tree=null;
        Object char_literal30_tree=null;
        Object char_literal31_tree=null;
        Object string_literal33_tree=null;
        Object string_literal34_tree=null;
        RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");
        RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
        RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:51:2: ( IDF | 'Vec' '<' type '>' -> ^( VEC type ) | '&' type | 'i32' | 'bool' )
            int alt8=5;
            switch ( input.LA(1) ) {
            case IDF:
                {
                alt8=1;
                }
                break;
            case 37:
                {
                alt8=2;
                }
                break;
            case 40:
                {
                alt8=3;
                }
                break;
            case 41:
                {
                alt8=4;
                }
                break;
            case 42:
                {
                alt8=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }

            switch (alt8) {
                case 1 :
                    // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:51:3: IDF
                    {
                    root_0 = (Object)adaptor.nil();

                    IDF26=(Token)match(input,IDF,FOLLOW_IDF_in_type269); 
                    IDF26_tree = (Object)adaptor.create(IDF26);
                    adaptor.addChild(root_0, IDF26_tree);


                    }
                    break;
                case 2 :
                    // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:52:3: 'Vec' '<' type '>'
                    {
                    string_literal27=(Token)match(input,37,FOLLOW_37_in_type273);  
                    stream_37.add(string_literal27);

                    char_literal28=(Token)match(input,38,FOLLOW_38_in_type275);  
                    stream_38.add(char_literal28);

                    pushFollow(FOLLOW_type_in_type277);
                    type29=type();

                    state._fsp--;

                    stream_type.add(type29.getTree());
                    char_literal30=(Token)match(input,39,FOLLOW_39_in_type279);  
                    stream_39.add(char_literal30);



                    // AST REWRITE
                    // elements: type
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 52:22: -> ^( VEC type )
                    {
                        // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:52:25: ^( VEC type )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(VEC, "VEC"), root_1);

                        adaptor.addChild(root_1, stream_type.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // /Users/Samy/Git_Telecom/Compilation2k18/Expr.g:53:3: '&' type
                    {
                    root_0 = (Object)adaptor.nil();

                    char_literal31=(Token)match(input,40,FOLLOW_40_in_type291); 
                    char_literal31_tree = (Object)adaptor.create(char_literal31);
                    adaptor.addChild(root_0, char_literal31_tree);
